add cart detail

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -67,6 +67,7 @@ header {
   position: sticky;
   top: 0;
   border-bottom: 1px solid #e4e4e4;
+  background-color: var(--basic);
 }
 
 header ul {
@@ -74,6 +75,20 @@ header ul {
   justify-content: space-around;
   list-style: none;
   margin-top: 8px;
+}
+
+header .cart {
+  position: fixed;
+  bottom: 40px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--dark);
+  color: var(--basic);
 }
 
 /* end header */
@@ -92,7 +107,13 @@ main .row {
 
 main .col {
   border-radius: 10px;
-  border: 1px solid #c1c1c1;
+  border: 1px solid #d4d4d4;
+  transition: 0.3s ease-in-out;
+}
+
+.menu:hover {
+  cursor: default;
+  box-shadow: 0 4px 8px rgba(30, 30, 30, 0.2);
 }
 
 main .col figure {
@@ -142,3 +163,66 @@ main .btn {
 }
 
 /* end main */
+
+#detail__cart {
+  width: 100%;
+  height: 100vh;
+  padding: 1em 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  background-color: var(--basic);
+  transition: 0.3s ease-in-out;
+  /* transform: translateX(100%); */
+}
+
+#detail__cart.back {
+  transform: translateX(100%);
+}
+
+#detail__cart .header__cart {
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.position__customer {
+  position: sticky;
+  top: 16px;
+  padding: 1em 0;
+  border-bottom: 1px solid #c1c1c1;
+}
+
+#detail__cart .row {
+  height: 400px;
+  margin: 1em 0;
+  border-top: 1px solid #c1c1c1;
+  border-bottom: 1px solid #c1c1c1;
+  overflow-y: scroll;
+}
+
+#detail__cart .process,
+.back__cart,
+.cancel {
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  font-size: 1.1rem;
+  background-color: var(--dark);
+  border: none;
+  color: var(--basic);
+  border-radius: 10px;
+  margin: 10px 0;
+}
+
+.back__cart {
+  width: 40px;
+  height: 40px;
+  background-color: var(--dark);
+  color: var(--basic);
+}
+
+.cancel {
+  background-color: var(--basic);
+  border: 2px solid var(--dark);
+  color: var(--dark);
+}
