--- a/src/style/global.css
+++ b/src/style/global.css
@@ -66,15 +66,26 @@ header {
   padding: 1em 0;
   position: sticky;
   top: 0;
+  z-index: 1;
   border-bottom: 1px solid #e4e4e4;
   background-color: var(--basic);
 }
 
-header ul {
-  width: 300px;
-  justify-content: space-around;
+header .col ul {
+  width: 100%;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
   list-style: none;
   margin-top: 8px;
+}
+
+header ul li {
+  border: 1px solid #c1c1c1;
+  color: #5d5d5d;
+  font-size: 0.8rem;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 header .cart {
@@ -106,6 +117,7 @@ main .row {
 }
 
 main .col {
+  overflow: hidden;
   border-radius: 10px;
   border: 1px solid #d4d4d4;
   transition: 0.3s ease-in-out;
@@ -173,11 +185,11 @@ main .btn {
   top: 0;
   background-color: var(--basic);
   transition: 0.3s ease-in-out;
-  /* transform: translateX(100%); */
+  transform: translateX(100%);
 }
 
 #detail__cart.back {
-  transform: translateX(100%);
+  transform: translateX(0);
 }
 
 #detail__cart .header__cart {
