--- a/src/style/global.css
+++ b/src/style/global.css
@@ -98,7 +98,19 @@ header .cart {
   align-items: center;
   border-radius: 50%;
   border: none;
-  background-color: var(--dark);
+  /* background-color: var(--dark);
+  color: var(--basic); */
+}
+
+.cart .qtyInCart {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 20px;
+  height: 20px;
+  padding: 2px;
+  border-radius: 3px;
+  background-color: red;
   color: var(--basic);
 }
 
