--- a/src/style/global.css
+++ b/src/style/global.css
@@ -110,6 +110,7 @@ header .cart {
   height: 20px;
   padding: 2px;
   border-radius: 3px;
+  display: none;
   background-color: red;
   color: var(--basic);
 }
@@ -201,7 +202,7 @@ main .btn {
   transform: translateX(100%);
 }
 
-#detail__cart.back {
+#detail__cart.show {
   transform: translateX(0);
 }
 
