--- a/src/style/global.css
+++ b/src/style/global.css
@@ -110,7 +110,7 @@ header .cart {
   height: 20px;
   padding: 2px;
   border-radius: 3px;
-  display: none;
+  /* display: none; */
   background-color: red;
   color: var(--basic);
 }
